--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,71 +1,64 @@
 {% load static %}
 {% load bootstrap5 %}
+
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
+
+    <!-- Required Import -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="{% static 'accounts/fonts/icomoon/style.css' %}">
-
     <link rel="stylesheet" href="{% static 'accounts/css/owl.carousel.min.css' %}">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'accounts/css/bootstrap.min.css' %}">
     
-    <!-- Style -->
+    <!-- Style Sheet -->
     <link rel="stylesheet" href="{% static 'accounts/css/style.css' %}">
-
     <link rel="stylesheet" href="{% static 'accounts/css/login.css' %}">
 
-    <title> Login </title>
-
+    {% comment %} Google Fonts {% endcomment %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
+    <title> 인공지능을 활용한 색체 기반 영화 추천 </title>
   </head>
+
   <body style="font-family: 'Noto Sans KR', sans-serif;">
+    <div class="d-lg-flex half">
 
-  
+      {% comment %} Backgroud Video {% endcomment %}
+      <div class="bg order-1 order-md-2">
+        <video class="h-100 w-100" src="{% static 'accounts/images/login.mp4'%}" autoplay muted loop></video>
+      </div>
 
-  <div class="d-lg-flex half">
-    {% comment %} Backgroud Video {% endcomment %}
-    <div class="bg order-1 order-md-2">
-      <video class="h-100 w-100" src="{% static 'accounts/images/loginVideo13.mp4'%}" autoplay muted loop></video>
-    </div>
-
-    {% comment %} Login input {% endcomment %}
-    <div class="contents order-2 order-md-1">
-
-      <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-md-7">
-            <div class="mb-4">
-              <h1><span class="pink">로</span>그<span class="cyan">인</span></h1>
-              <p class="mb-4">당신의 <span class="pink">색</span>을 위한 영화를 <span class="cyan"> 추천</span>합니다.</p>
+      {% comment %} Login input {% endcomment %}
+      <div class="contents order-2 order-md-1">
+        <div class="container">
+          <div class="row align-items-center justify-content-center">
+            <div class="col-md-7">
+              <div class="mb-4">
+                <h1><span class="pink">로</span>그<span class="cyan">인</span></h1>
+                <p class="mb-4">당신의 <span class="pink">색</span>을 위한 영화를 <span class="cyan"> 추천</span>합니다.</p>
+              </div>
+              <form action="" method="POST">
+              {% csrf_token %}
+              {% bootstrap_form form %}
+              <button class="btn btn-primary w-100 login">로그인</button>
+              </form>
+              <span class="d-block text-center my-4">&mdash; or &mdash;</span>
+              <button class="btn btn-primary w-100 signup" onclick="location.href='{% url 'accounts:signup' %}' ">회원가입</button>
             </div>
-            <form action="" method="POST">
-            {% csrf_token %}
-            {% bootstrap_form form %}
-            <button class="btn btn-primary w-100 login">로그인</button>
-            </form>
-
-             <span class="d-block text-center my-4">&mdash; or &mdash;</span>
-            <button class="btn btn-primary w-100 signup" onclick="location.href='{% url 'accounts:signup' %}' ">회원가입</button>
-
           </div>
         </div>
       </div>
     </div>
-
-    
-  </div>
     
     
-
+    {% comment %} Required Scripts {% endcomment %}
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
