--- a/templates/base.html
+++ b/templates/base.html
@@ -2,184 +2,186 @@
 
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-  <meta charset="UTF-8">
-  <title>인공지능을 활용한 색체 기반 영화 추천</title>
-
-  {% comment %} Thema StyleSheet {% endcomment %}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-  {% comment %} Bootstrap CDN {% endcomment %}
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-  {% comment %} Google Font {% endcomment %}
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-
-  {% comment %} Style Sheet {% endcomment %}
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
-</head>
-
-<body style="font-family: 'Noto Sans KR', sans-serif;"> 
-
-  {% comment %} Background Video {% endcomment %}
-  <div class="video-bg">
-    <video width="320" height="240" autoplay loop muted>
-      <source src="{% static 'videos/background.mp4' %}" type="video/mp4">
-    </video>
-  </div>
-
-  {% comment %} Application {% endcomment %}
-  <div class="app">
-
-    {% comment %} Header {% endcomment %}
-    <div class="header">
-      <div class="header-menu">
-        <a class="menu-link " href="{% url 'movies:index' %}"
-          style="font-size: 20px; color: white; font-weight: bolder;">인공지능을 활용한 색채 기반 영화 추천</a>
-      </div>
-      <div class="search-bar">
-        <input type="text" placeholder="Search">
-      </div>
-      <div class="header-profile">
-        <div class="notification d-flex">
-          <h3 style="color:white;">{{ user.username }} <button class="btn btn-white"
-              onclick="location.href = '{% url 'accounts:logout' %}'"> 로그아웃 </button></h3>
-        </div>
-      </div>
-    </div>
-    {% comment %} END Header {% endcomment %}
-
-
-    {% comment %} Contents {% endcomment %}
-    <div class="wrapper">
+  <head>
+    <meta charset="UTF-8">
+    <title>인공지능을 활용한 색체 기반 영화 추천</title>
     
-      {% comment %} Profile {% endcomment %}
-      <div class="left-side">
+    {% comment %} Thema StyleSheet {% endcomment %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-        {% comment %} Profile Section 1 {% endcomment %}
-        <div class="side-wrapper">
-          <div class="side-title">현재 당신의 색채</div>
-          <div class="side-menu">
-            <div
-              style="width:200px; height:200px; border-radius:50%; opacity: 0.9; background: {{ last_color.color }};">
-            </div>
-          </div>
+    {% comment %} Bootstrap CDN {% endcomment %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    {% comment %} Google Font {% endcomment %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+
+    {% comment %} Style Sheet {% endcomment %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+    {% block option_import %}{% endblock option_import %}
+  </head>
+
+  <body style="font-family: 'Noto Sans KR', sans-serif;"> 
+
+    {% comment %} Background Video {% endcomment %}
+    <div class="video-bg">
+      <video width="320" height="240" autoplay loop muted>
+        <source src="{% static 'videos/background.mp4' %}" type="video/mp4">
+      </video>
+    </div>
+
+    {% comment %} Application {% endcomment %}
+    <div class="app">
+
+      {% comment %} Header {% endcomment %}
+      <div class="header">
+        <div class="header-menu">
+          <a class="menu-link " href="{% url 'movies:index' %}"
+            style="font-size: 20px; color: white; font-weight: bolder;">인공지능을 활용한 색채 기반 영화 추천</a>
         </div>
-
-        {% comment %} Profile Section 2 {% endcomment %}
-        <div class="side-wrapper">
-          <div class="side-title">당신을 위한 색채의 기록들</div>
-          <div class="side-menu">
-            {% for color in colors %}
-            <div class="progress mt-3">
-              <div class="progress-bar" role="progressbar" style="width: 100%; background-color: {{ color.color }};"
-                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            {% endfor %}
-          </div>
+        <div class="search-bar">
+          <input type="text" placeholder="Search">
         </div>
-
-        {% comment %} Profile Section 3 {% endcomment %}
-        <div class="side-wrapper">
-          <div class="side-title">음성인식</div>
-          <div class="side-menu">
-            <a href="#">
-              <svg viewBox="0 0 332 332" fill="currentColor">
-                <path
-                  d="M282.341 8.283C275.765 2.705 266.211 0 253.103 0c-18.951 0-36.359 5.634-51.756 16.743-14.972 10.794-29.274 28.637-42.482 53.028-4.358 7.993-7.428 11.041-8.973 12.179h-26.255c-10.84 0-19.626 8.786-19.626 19.626 0 8.989 6.077 16.486 14.323 18.809l-.05.165h.589c1.531.385 3.109.651 4.757.651h18.833l-32.688 128.001c-7.208 27.848-10.323 37.782-11.666 41.24-1.445 3.711-3.266 7.062-5.542 10.135-.42-5.39-2.637-10.143-6.508-13.854-4.264-4.079-10.109-6.136-17.364-6.136-8.227 0-15.08 2.433-20.37 7.229-5.416 4.93-8.283 11.193-8.283 18.134 0 5.157 1.701 12.712 9.828 19.348 6.139 4.97 14.845 7.382 26.621 7.382 17.096 0 32.541-4.568 45.891-13.577 13.112-8.845 24.612-22.489 34.166-40.522 9.391-17.678 18.696-45.124 28.427-83.9l18.598-73.479h30.016c10.841 0 19.625-8.785 19.625-19.625s-8.784-19.626-19.625-19.626h-19.628c6.34-21.62 14.175-37.948 23.443-48.578 2.284-2.695 5.246-5.692 8.412-7.678-1.543 3.392-2.325 6.767-2.325 10.055 0 6.164 2.409 11.714 6.909 16.03 4.484 4.336 10.167 6.54 16.888 6.54 7.085 0 13.373-2.667 18.17-7.716 4.76-5.005 7.185-11.633 7.185-19.703.017-9.079-3.554-16.899-10.302-22.618z" />
-              </svg>
-              음성인식 소환
-            </a>
-          </div>
-        </div>
-
-        {% comment %} Profile Section 4 {% endcomment %}
-        <div class="side-wrapper">
-          <div class="side-title">옵션</div>
-          <div class="side-menu">
-            <a href="{% url 'movies:choice' %}">
-              <svg viewBox="0 0 512 512" fill="currentColor">
-                <path
-                  d="M467 0H45C20.186 0 0 20.186 0 45v422c0 24.814 20.186 45 45 45h422c24.814 0 45-20.186 45-45V45c0-24.814-20.186-45-45-45zM181 241c41.353 0 75 33.647 75 75s-33.647 75-75 75-75-33.647-75-75c0-8.291 6.709-15 15-15s15 6.709 15 15c0 24.814 20.186 45 45 45s45-20.186 45-45-20.186-45-45-45c-41.353 0-75-33.647-75-75s33.647-75 75-75 75 33.647 75 75c0 8.291-6.709 15-15 15s-15-6.709-15-15c0-24.814-20.186-45-45-45s-45 20.186-45 45 20.186 45 45 45zm180 120h30c8.291 0 15 6.709 15 15s-6.709 15-15 15h-30c-24.814 0-45-20.186-45-45V211h-15c-8.291 0-15-6.709-15-15s6.709-15 15-15h15v-45c0-8.291 6.709-15 15-15s15 6.709 15 15v45h45c8.291 0 15 6.709 15 15s-6.709 15-15 15h-45v135c0 8.276 6.724 15 15 15z" />
-              </svg>
-              색채 고르기
-            </a>
-            <a href="#">
-              <svg viewBox="0 0 511.441 511.441" fill="currentColor">
-                <path d="M255.721 347.484L90.22 266.751v106.57l165.51 73.503 165.509-73.503V266.742z" />
-                <path
-                  d="M511.441 189.361L255.721 64.617 0 189.361l255.721 124.744 195.522-95.378v111.032h30V204.092z" />
-              </svg>
-              평점순 정렬
-            </a>
-            <a href="#">
-              <svg viewBox="0 0 512 512" fill="currentColor">
-                <path d="M196 151h-75v90h75c24.814 0 45-20.186 45-45s-20.186-45-45-45z" />
-                <path
-                  d="M467 0H45C20.186 0 0 20.186 0 45v422c0 24.814 20.186 45 45 45h422c24.814 0 45-20.186 45-45V45c0-24.814-20.186-45-45-45zM196 271h-75v105c0 8.291-6.709 15-15 15s-15-6.709-15-15V136c0-8.291 6.709-15 15-15h90c41.353 0 75 33.647 75 75s-33.647 75-75 75zm210-60c8.291 0 15 6.709 15 15s-6.709 15-15 15h-45v135c0 8.291-6.709 15-15 15s-15-6.709-15-15V241h-15c-8.291 0-15-6.709-15-15s6.709-15 15-15h15v-45c0-24.814 20.186-45 45-45h30c8.291 0 15 6.709 15 15s-6.709 15-15 15h-30c-8.276 0-15 6.724-15 15v45h45z" />
-              </svg>
-              최신순 정렬
-
-            </a>
-
-            <a href="{% url 'movies:choice' %}">
-              <svg viewBox="0 0 512 512" fill="currentColor">
-                <path
-                  d="M352 0H64C28.704 0 0 28.704 0 64v320a16.02 16.02 0 009.216 14.496A16.232 16.232 0 0016 400c3.68 0 7.328-1.248 10.24-3.712L117.792 320H352c35.296 0 64-28.704 64-64V64c0-35.296-28.704-64-64-64z" />
-                <path
-                  d="M464 128h-16v128c0 52.928-43.072 96-96 96H129.376L128 353.152V400c0 26.464 21.536 48 48 48h234.368l75.616 60.512A16.158 16.158 0 00496 512c2.336 0 4.704-.544 6.944-1.6A15.968 15.968 0 00512 496V176c0-26.464-21.536-48-48-48z" />
-              </svg>
-              뒤로가기
-            </a>
+        <div class="header-profile">
+          <div class="notification d-flex">
+            <h3 style="color:white;">{{ user.username }} <button class="btn btn-white"
+                onclick="location.href = '{% url 'accounts:logout' %}'"> 로그아웃 </button></h3>
           </div>
         </div>
       </div>
-      {% comment %} END Profile {% endcomment %}
-
-      <div class="main-container">
-        <div class="main-header">
-        </div>
-        <div class="content-wrapper">
+      {% comment %} END Header {% endcomment %}
 
 
+      {% comment %} Contents {% endcomment %}
+      <div class="wrapper">
+      
+        {% comment %} Profile {% endcomment %}
+        <div class="left-side">
 
-          {% for movie in movies %}
-          <div class="content-section mt-3">
-            <div class="app-card">
-              <span>
-                <svg viewBox="0 0 52 52" style="border: 1px solid #C75DEB">
-                  <g xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M40.824 52H11.176C5.003 52 0 46.997 0 40.824V11.176C0 5.003 5.003 0 11.176 0h29.649C46.997 0 52 5.003 52 11.176v29.649C52 46.997 46.997 52 40.824 52z"
-                      fill="#3a3375" data-original="#3a3375" />
-                    <path
-                      d="M27.44 39H24.2l-2.76-9.04h-8.32L10.48 39H7.36l8.24-28h3.32l8.52 28zm-6.72-12l-3.48-11.36L13.88 27h6.84zM31.48 33.48c0 2.267 1.333 3.399 4 3.399 1.653 0 3.466-.546 5.44-1.64L42 37.6c-2.054 1.254-4.2 1.881-6.44 1.881-4.64 0-6.96-1.946-6.96-5.841v-8.2c0-2.16.673-3.841 2.02-5.04 1.346-1.2 3.126-1.801 5.34-1.801s3.94.594 5.18 1.78c1.24 1.187 1.86 2.834 1.86 4.94V30.8l-11.52.6v2.08zm8.6-5.24v-3.08c0-1.413-.44-2.42-1.32-3.021-.88-.6-1.907-.899-3.08-.899-1.174 0-2.167.359-2.98 1.08-.814.72-1.22 1.773-1.22 3.16v3.199l8.6-.439z"
-                      fill="#e4d1eb" data-original="#e7adfb" />
-                  </g>
-                </svg>
-                {{ movie.title }}
-              </span>
-              <div class="app-card__subtext">{{ movie.overview }}</div>
-              <div class="app-card-buttons">
-                <button class="content-button status-button"
-                  onclick="location.href='{% url 'movies:detail' movie.pk %}'"> 이동 </button>
-                <div class="menu"></div>
+          {% comment %} Profile Section 1 {% endcomment %}
+          <div class="side-wrapper">
+            <div class="side-title">현재 당신의 색채</div>
+            <div class="side-menu">
+              <div
+                style="width:200px; height:200px; border-radius:50%; opacity: 0.9; background: {{ last_color.color }};">
               </div>
             </div>
-            {% endfor %}
+          </div>
+
+          {% comment %} Profile Section 2 {% endcomment %}
+          <div class="side-wrapper">
+            <div class="side-title">당신을 위한 색채의 기록들</div>
+            <div class="side-menu">
+              {% for color in colors %}
+              <div class="progress mt-3">
+                <div class="progress-bar" role="progressbar" style="width: 100%; background-color: {{ color.color }};"
+                  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              {% endfor %}
+            </div>
+          </div>
+
+          {% comment %} Profile Section 3 {% endcomment %}
+          <div class="side-wrapper">
+            <div class="side-title">음성인식</div>
+            <div class="side-menu">
+              <a href="#">
+                <svg viewBox="0 0 332 332" fill="currentColor">
+                  <path
+                    d="M282.341 8.283C275.765 2.705 266.211 0 253.103 0c-18.951 0-36.359 5.634-51.756 16.743-14.972 10.794-29.274 28.637-42.482 53.028-4.358 7.993-7.428 11.041-8.973 12.179h-26.255c-10.84 0-19.626 8.786-19.626 19.626 0 8.989 6.077 16.486 14.323 18.809l-.05.165h.589c1.531.385 3.109.651 4.757.651h18.833l-32.688 128.001c-7.208 27.848-10.323 37.782-11.666 41.24-1.445 3.711-3.266 7.062-5.542 10.135-.42-5.39-2.637-10.143-6.508-13.854-4.264-4.079-10.109-6.136-17.364-6.136-8.227 0-15.08 2.433-20.37 7.229-5.416 4.93-8.283 11.193-8.283 18.134 0 5.157 1.701 12.712 9.828 19.348 6.139 4.97 14.845 7.382 26.621 7.382 17.096 0 32.541-4.568 45.891-13.577 13.112-8.845 24.612-22.489 34.166-40.522 9.391-17.678 18.696-45.124 28.427-83.9l18.598-73.479h30.016c10.841 0 19.625-8.785 19.625-19.625s-8.784-19.626-19.625-19.626h-19.628c6.34-21.62 14.175-37.948 23.443-48.578 2.284-2.695 5.246-5.692 8.412-7.678-1.543 3.392-2.325 6.767-2.325 10.055 0 6.164 2.409 11.714 6.909 16.03 4.484 4.336 10.167 6.54 16.888 6.54 7.085 0 13.373-2.667 18.17-7.716 4.76-5.005 7.185-11.633 7.185-19.703.017-9.079-3.554-16.899-10.302-22.618z" />
+                </svg>
+                음성인식 소환
+              </a>
+            </div>
+          </div>
+
+          {% comment %} Profile Section 4 {% endcomment %}
+          <div class="side-wrapper">
+            <div class="side-title">옵션</div>
+            <div class="side-menu">
+              <a href="{% url 'movies:choice' %}">
+                <svg viewBox="0 0 512 512" fill="currentColor">
+                  <path
+                    d="M467 0H45C20.186 0 0 20.186 0 45v422c0 24.814 20.186 45 45 45h422c24.814 0 45-20.186 45-45V45c0-24.814-20.186-45-45-45zM181 241c41.353 0 75 33.647 75 75s-33.647 75-75 75-75-33.647-75-75c0-8.291 6.709-15 15-15s15 6.709 15 15c0 24.814 20.186 45 45 45s45-20.186 45-45-20.186-45-45-45c-41.353 0-75-33.647-75-75s33.647-75 75-75 75 33.647 75 75c0 8.291-6.709 15-15 15s-15-6.709-15-15c0-24.814-20.186-45-45-45s-45 20.186-45 45 20.186 45 45 45zm180 120h30c8.291 0 15 6.709 15 15s-6.709 15-15 15h-30c-24.814 0-45-20.186-45-45V211h-15c-8.291 0-15-6.709-15-15s6.709-15 15-15h15v-45c0-8.291 6.709-15 15-15s15 6.709 15 15v45h45c8.291 0 15 6.709 15 15s-6.709 15-15 15h-45v135c0 8.276 6.724 15 15 15z" />
+                </svg>
+                색채 고르기
+              </a>
+              <a href="#">
+                <svg viewBox="0 0 511.441 511.441" fill="currentColor">
+                  <path d="M255.721 347.484L90.22 266.751v106.57l165.51 73.503 165.509-73.503V266.742z" />
+                  <path
+                    d="M511.441 189.361L255.721 64.617 0 189.361l255.721 124.744 195.522-95.378v111.032h30V204.092z" />
+                </svg>
+                평점순 정렬
+              </a>
+              <a href="#">
+                <svg viewBox="0 0 512 512" fill="currentColor">
+                  <path d="M196 151h-75v90h75c24.814 0 45-20.186 45-45s-20.186-45-45-45z" />
+                  <path
+                    d="M467 0H45C20.186 0 0 20.186 0 45v422c0 24.814 20.186 45 45 45h422c24.814 0 45-20.186 45-45V45c0-24.814-20.186-45-45-45zM196 271h-75v105c0 8.291-6.709 15-15 15s-15-6.709-15-15V136c0-8.291 6.709-15 15-15h90c41.353 0 75 33.647 75 75s-33.647 75-75 75zm210-60c8.291 0 15 6.709 15 15s-6.709 15-15 15h-45v135c0 8.291-6.709 15-15 15s-15-6.709-15-15V241h-15c-8.291 0-15-6.709-15-15s6.709-15 15-15h15v-45c0-24.814 20.186-45 45-45h30c8.291 0 15 6.709 15 15s-6.709 15-15 15h-30c-8.276 0-15 6.724-15 15v45h45z" />
+                </svg>
+                최신순 정렬
+
+              </a>
+            
+              <a href={% block back_URL %} {% endblock back_URL %}>
+                <svg viewBox="0 0 512 512" fill="currentColor">
+                  <path
+                    d="M352 0H64C28.704 0 0 28.704 0 64v320a16.02 16.02 0 009.216 14.496A16.232 16.232 0 0016 400c3.68 0 7.328-1.248 10.24-3.712L117.792 320H352c35.296 0 64-28.704 64-64V64c0-35.296-28.704-64-64-64z" />
+                  <path
+                    d="M464 128h-16v128c0 52.928-43.072 96-96 96H129.376L128 353.152V400c0 26.464 21.536 48 48 48h234.368l75.616 60.512A16.158 16.158 0 00496 512c2.336 0 4.704-.544 6.944-1.6A15.968 15.968 0 00512 496V176c0-26.464-21.536-48-48-48z" />
+                </svg>
+                뒤로가기
+              </a>
+            </div>
           </div>
         </div>
+        {% comment %} END Profile {% endcomment %}
+
+        {% block content %}
+        <div class="main-container">
+          <div class="main-header">
+          </div>
+
+          <div class="content-wrapper">
+
+
+
+            {% for movie in movies %}
+            <div class="content-section mt-3">
+              <div class="app-card">
+                <span>
+                  <svg viewBox="0 0 52 52" style="border: 1px solid #C75DEB">
+                    <g xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M40.824 52H11.176C5.003 52 0 46.997 0 40.824V11.176C0 5.003 5.003 0 11.176 0h29.649C46.997 0 52 5.003 52 11.176v29.649C52 46.997 46.997 52 40.824 52z"
+                        fill="#3a3375" data-original="#3a3375" />
+                      <path
+                        d="M27.44 39H24.2l-2.76-9.04h-8.32L10.48 39H7.36l8.24-28h3.32l8.52 28zm-6.72-12l-3.48-11.36L13.88 27h6.84zM31.48 33.48c0 2.267 1.333 3.399 4 3.399 1.653 0 3.466-.546 5.44-1.64L42 37.6c-2.054 1.254-4.2 1.881-6.44 1.881-4.64 0-6.96-1.946-6.96-5.841v-8.2c0-2.16.673-3.841 2.02-5.04 1.346-1.2 3.126-1.801 5.34-1.801s3.94.594 5.18 1.78c1.24 1.187 1.86 2.834 1.86 4.94V30.8l-11.52.6v2.08zm8.6-5.24v-3.08c0-1.413-.44-2.42-1.32-3.021-.88-.6-1.907-.899-3.08-.899-1.174 0-2.167.359-2.98 1.08-.814.72-1.22 1.773-1.22 3.16v3.199l8.6-.439z"
+                        fill="#e4d1eb" data-original="#e7adfb" />
+                    </g>
+                  </svg>
+                  {{ movie.title }}
+                </span>
+                <div class="app-card__subtext">{{ movie.overview }}</div>
+                <div class="app-card-buttons">
+                  <button class="content-button status-button"
+                    onclick="location.href='{% url 'movies:detail' movie.pk %}'"> 이동 </button>
+                  <div class="menu"></div>
+                </div>
+              </div>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+        {% endblock content %}
       </div>
     </div>
-  </div>
-  <div class="overlay-app"></div>
-  </div>
+    <div class="overlay-app"></div>
+    </div>
 
-</body>
-
+  </body>
 </html>
